added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,43 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Anchor tag (a): to link URLS on webpage</li>
+          <li>Break tag (br): Creates break in line/empty space</li>
+          <li>Image tag (img): Parent element containing info on the image</li>
+          <li>src: defines location/path for image</li>
+          <li>Unordered List tag (ul): Creates bullet point lists</li>
+          <li>Ordered List tag (ol): Creates numbered lists</li>
+          <li>List tag (li): contains list info</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: Checks what branch we are currently in</li>
+          <li>git checkpoint -b "insert branch path name here": Creates a new branch/switches to it</li>
+          <li>git pull origin main: Pulls latest main branch in folder</li>
+          <li>ls: Creates list in directory</li>
+          <li>cd: Changes directory (add '..' to return back)</li>
+          <li>start: Opens file</li>
+          <li>code .: Opens folder in VS Code</li>
+
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+      </section> 
     </main>
 
     <footer>
