added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -18,16 +19,22 @@
           <li>Anchor tag (a): to link URLS on webpage</li>
           <li>Break tag (br): Creates break in line/empty space</li>
           <li>Image tag (img): Parent element containing info on the image</li>
-          <li>src: defines location/path for image</li>
+          <li>src: attribute that defines location/path for image</li>
           <li>Unordered List tag (ul): Creates bullet point lists</li>
           <li>Ordered List tag (ol): Creates numbered lists</li>
           <li>List tag (li): contains list info</li>
+          <li>href: attribute that specifies location of external URL</li>
+          <li>rel: attribute that specifies relationship between doc and linked doc</li>
         </ul>
       </section>
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Box Model: Content, Padding, Border, Margin</li>
+          <li>"*" aka Astrik: Is a Selector that applies values to entire HTML</li>
+          <li>Declarations: Property to Value </li>
+          <li>A Margin indicates how much space we want around the content inside an element</li>
+          <li>A Padding indicates how much space we want around the content inside an element</li>
         </ul>
       </section>
       <section class="card" id="git-section">
