--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -53,7 +54,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>console.log(): Method to log variable to web console</li>
+          <li>equal operator in JS contains 3 "==="</li>
+          <li>unequal operator in JS contains "!==="</li>
+          <li>Calling JS file uses script tag followed by a src attribute</li>
+          <li> var defines variable</li>
         </ul>
       </section> 
     </main>
@@ -61,5 +66,10 @@
     <footer>
       <p>I can code!</p>
     </footer>
+
+    <script src="./assets/script.js">
+
+    </script>
+
   </body>
 </html>
