Added Functions in JavaScript

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>console.log(): Method to log variable to web console</li>
+          <li>console.log(): Method to print strings to web console</li>
           <li>equal operator in JS contains 3 "==="</li>
           <li>unequal operator in JS contains "!==="</li>
           <li>Calling JS file uses script tag followed by a src attribute</li>
-          <li> var defines variable</li>
+          <li> var: A named container that allows us to store data in our code</li>
+          <li> when defining functions,dont place semi colons after (), just a curly bracket</li>
+          
         </ul>
       </section> 
     </main>
