Created README file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <ul>
           <li>git status: Checks what branch we are currently in</li>
           <li>git checkpoint -b "insert branch path name here": Creates a new branch/switches to it</li>
-          <li>git pull origin main: Pulls latest main branch in folder</li>
+          <li>git pull origin main: Pulls latest main branch(updates local main)in folder</li>
+          <li>git checkout main: switches to main repo</li>
           <li>ls: Creates list in directory</li>
           <li>cd: Changes directory (add '..' to return back)</li>
           <li>start: Opens file</li>
